@@ -1,3 +1,9 @@
+2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- MAJOR FIX by Hans de Goede: the focus IS now given to GCompris when in fullscreen
+	  with xvidmode.
+	* src/gcompris/gcompris.c: (gc_fullscreen_set), (main):
+
 2007-09-22  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Added Breton sounds created by Alan Monfort free fr and Victoire.
